# auto-epp-rs

./: Cargo.toml  PKGBUILD  README.md  auto-epp-rs.service
.github/workflows/: release.yaml
src/: battery.rs  config.rs  cpu.rs  main.rs  user.rs  utils.rs
src/cpu/: driver.rs  epp.rs  governor.rs
src/utils/: fs.rs
